<resources>
    <string name="app_name">CO2 halt</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="string_email">Email</string>
    <string name="string_password">Password</string>
    <string name="string_sign_up">Sign Up</string>
    <string name="string_login">Log In</string>
    <string name="strin_new_acc">Create a new account</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="facebook_app_id">380731663003880</string>
    <string name="fb_login_protocol_scheme">fb380731663003880</string>
    <string name="ACCOUNT_KIT_CLIENT_TOKEN">439b7bfb77c035a20661e34b531860aa</string>
    <string name="full_name">Full Name</string>
    <string name="confirm_password">Confirm Password</string>
</resources>