<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    android:elevation="2dp"
    tools:context=".login.loginActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:background="@color/primary"
        android:scaleType="centerCrop"
        android:src="@drawable/startup"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent=".22"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/login_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent=".78"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">


        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="350dp"

            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/string_email"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editTextTextPassword"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/string_password"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextEmail" />

        <Button
            android:id="@+id/bt_login"
            android:layout_width="350dp"
            android:layout_height="70dp"
            android:layout_marginTop="40dp"
            android:backgroundTint="@color/accent"
            android:drawableRight="@drawable/ic_baseline_arrow_forward_24"
            android:drawableTint="@color/white"

            android:elevation="2dp"
            android:text="@string/string_login"
            app:cornerRadius="10dp"
            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />

        <Button
            android:id="@+id/bt_sign_up"
            android:layout_width="350dp"
            android:layout_height="70dp"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/white"
            android:drawableRight="@drawable/ic_baseline_arrow_forward_24"
            android:drawableTint="@color/accent"
            android:elevation="2dp"

            android:text="@string/strin_new_acc"
            android:textColor="@color/accent"
            app:cornerRadius="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:strokeColor="@color/accent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bt_login" />

        <Button
            android:id="@+id/bt_google"
            android:layout_width="160dp"
            android:layout_height="60dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="50dp"
            android:text="Button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/bt_fb"
            android:layout_width="160dp"
            android:layout_height="60dp"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="48dp"
            android:backgroundTint="@color/fb"
            android:drawableLeft="@drawable/fb_icon"
            android:drawableTint="@color/fb"
            android:text="Button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/bt_google"
            app:layout_constraintHorizontal_bias="0.433"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>